# MotionPlanner

./: CMakeLists.txt  README  README.md  package.xml
include/at_motion_planner/: motion_planner_node.hpp  navigator.hpp  spline.hpp  test_server_node.hpp  utils.hpp
interface/: Navigate.action
rviz/: config.rviz
src/: motion_planner_node.cpp  navigator.cpp  test_server_node.cpp  utils.cpp
